# lcdf-typetools

./: .gitignore  Makefile.am  NEWS  NEWS.md  ONEWS  README  README.md  acconfig.h  bootstrap.sh  configure.ac  configure.in  glyphlist.txt  lcdf-typetools.spec  make-glyphtounicode.pl  mkuniprop.pl  otf.com  sourcecheckout.sh  texglyphlist-g2u.txt  texglyphlist.txt  texmathunicoding.txt
cfftot1/: .gitignore  Makefile.am  cfftot1.1  cfftot1.cc  maket1font.cc  maket1font.hh  templatei.cc
edlib/: Makefile.am
include/: .gitignore  config.h
include/efont/: afm.hh  afmparse.hh  afmw.hh  amfm.hh  cff.hh  encoding.hh  findmet.hh  metrics.hh  otf.hh  otfcmap.hh  otfdata.hh  otffvar.hh  otfgpos.hh  otfgsub.hh  otfname.hh  otfos2.hh  otfpost.hh  pairop.hh  psres.hh  t1bounds.hh  t1cs.hh  t1csgen.hh  t1font.hh  t1interp.hh  t1item.hh  t1mm.hh  t1rw.hh  t1unparser.hh  ttfcs.hh  ttfhead.hh
include/lcdf/: bezier.hh  error.hh  filename.hh  hashmap.cc  hashmap.hh  landmark.hh  permstr.hh  point.hh  slurper.hh  straccum.hh  string.hh  transform.hh  vector.cc  vector.hh
libefont/: .gitignore  Makefile.am  afm.cc  afmparse.cc  afmw.cc  amfm.cc  cff.cc  encoding.cc  findmet.cc  metrics.cc  otf.cc  otfcmap.cc  otfdata.cc  otfdescrip.cc  otffvar.cc  otfgpos.cc  otfgsub.cc  otfname.cc  otfos2.cc  otfpost.cc  pairop.cc  psres.cc  t1bounds.cc  t1cs.cc  t1csgen.cc  t1font.cc  t1fontskel.cc  t1interp.cc  t1item.cc  t1mm.cc  t1rw.cc  t1unparser.cc  ttfcs.cc  ttfhead.cc  ttfkern.cc
liblcdf/: .gitignore  Makefile.am  bezier.cc  clp.c  error.cc  filename.cc  fixlibc.c  globmatch.cc  landmark.cc  md5.c  permstr.cc  point.cc  slurper.cc  straccum.cc  string.cc  strtonum.c  transform.cc  vectorv.cc
mmafm/: .gitignore  Makefile.am  Makefile.in  hashmapi.cc  main.cc  mmafm.1  mmafm.man  mmafm.min  templatei.cc  vectori.cc
mmpfb/: .gitignore  Makefile.am  Makefile.in  hashmapi.cc  main.cc  mmpfb.1  mmpfb.man  mmpfb.min  myfont.cc  myfont.hh  t1minimize.cc  t1rewrit.cc  t1rewrit.hh  templatei.cc  vectori.cc
otfinfo/: .gitignore  Makefile.am  otfinfo.1  otfinfo.cc
otftopl/: Makefile.am  automatic.cc  automatic.hh  dvipsencoding.cc  dvipsencoding.hh  gsubencoding.cc  gsubencoding.hh  kpseinterface.c  kpseinterface.h  otftopl.1  otftopl.cc  templatei.cc  util.cc  util.hh
otftotfm/: .gitignore  Makefile.am  automatic.cc  automatic.hh  dvipsencoding.cc  dvipsencoding.hh  glyphfilter.cc  glyphfilter.hh  gsubencoding.cc  gsubencoding.hh  kpseinterface.c  kpseinterface.h  metrics.cc  metrics.hh  otftotfm.1  otftotfm.cc  otftotfm.hh  secondary.cc  secondary.hh  templatei.cc  uniprop.cc  uniprop.hh  util.cc  util.hh
showings/: .gitignore  Makefile  MinionPro-It-features.tex  MinionPro-Regular-features.tex  WarnockPro-It-features.tex  WarnockPro-Regular-features.tex  features.tex  install.sh
t1dotlessj/: .gitignore  Makefile.am  t1dotlessj.1  t1dotlessj.cc
t1lib/: Makefile.am
t1lint/: .gitignore  Makefile.am  cscheck.cc  cscheck.hh  hashmapi.cc  main.cc  t1lint.1  t1lint.cc
t1rawafm/: .gitignore  Makefile.am  t1rawafm.1  t1rawafm.cc
t1reencode/: .gitignore  Makefile.am  checkencs.pl  t1reencode.1  t1reencode.cc  util.cc
t1testpage/: .gitignore  Makefile.am  t1testpage.1  t1testpage.cc  templatei.cc  vectori.cc
ttftotype42/: .gitignore  Makefile.am  ttftotype42.1  ttftotype42.cc
